# flux-collaboration-rust-cache

./: .gitignore  AGENTS.md  CLAUDE.md  COMPLEX_OBJECT_GUIDE.md  Cargo.toml  DISK_OPTIMIZATION_GUIDE.md  FLATBUFFERS_SUMMARY.md  README.md  README_DatahubRustJniCache.md  SERIALIZATION_GUIDE.md  build.bat  build.sh  generate_flatbuffers.bat  generate_flatbuffers.sh  package-lock.json
docs/: big_data_optimization_summary.md  configuration.md
examples/: Hpmm_Bench.rs  MyRustTest.rs  basic_ops.rs  disk_optimization_example.rs  simple_disk_optimization.rs
src/: benchmark_runner.rs  big_data_storage.rs  cache.rs  dashmap_test.rs  disk_storage.rs  error_handling.rs  flatbuffers_serialization.rs  high_perf_mmap_storage.rs  high_perf_mmap_storage_backup.rs  high_perf_mmap_storage_copy.rs  high_perf_mmap_storage_fixed.rs  jni_bridge.rs  jni_bridge_big_data.rs  jni_bridge_datahub.rs  jni_bridge_enhanced.rs  jni_bridge_flatbuffers.rs  jni_bridge_high_perf.rs  jni_bridge_unified.rs  lib.rs  logging.rs  mmap_storage.rs  optimized_cache.rs  optimized_mmap_storage.rs  performance_tests.rs  serialization.rs
tests/: performance_test.rs  read_write_delete_performance.rs  storage_performance_test.rs
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.vue  main.ts
webui/src/api/: api.ts  http.ts
webui/src/components/: CompressionSection.vue  ConfigSection.vue  InstanceSummary.vue  MemorySection.vue  SectionCard.vue  StatsSection.vue
webui/src/types/: highPerfMmap.ts
webui/src/utils/: formatters.ts
webui/src/views/: HighPerfMmapDashboard.vue
